--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>hunters vr scene </title>
+   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+   <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script> 
 </head>
-
+   
 <body>
-  Hello world
-  <script src="script.js"></script>
+<a-scene>
+  <a-entity environment="preset:dream; dressingAmount:1;skyColor:#38A700;"></a-entity>
+<!-- strt house-->
+   <a-cylinder id="floor" position="0 0 0" radius="7.5" color="green" height="0.1"></a-cylinder>
+  <a-box id="box1" position="0  1.473  4.907" rotation="0  0  0" scale="10  3  0.2" color="red"></a-box>
+  <a-box id="box2" position="0  1.473  -4.907" rotation="0  0  0" scale="10  3  0.2" color="red"></a-box>
+  <a-box id="box3" position="5.049  1.454  -0.008" rotation="0  -90  0" scale="10  3  0.2" color="red"></a-box>
+  <a-box id="box4" position="-5.049  1.454  -0.008" rotation="0  -90  0" scale="10  3  0.2" color="red"></a-box>
+  <a-cylinder id="triangle_front" segments-radial="3" position="0  3.874 4.907" rotation="-90  0  0" scale="5.774  0.2  1.8" color="pink"></a-cylinder>
+    <a-cylinder id="triangle_back" segments-radial="3" position="0  3.874 -4.907" rotation="-90  0  0" scale="5.774  0.2  1.8" color="pink"></a-cylinder>
+  <a-box id="roof_right" position="2.580  4.328  0" rotation="28.433  90  0" scale="10.931 0.20  6.110" color="silver"></a-box>
+  <a-box id="roof_left" position=" -2.599  4.3321  -0.017" rotation="28.433  -90  0" scale="10.931 0.20  6.130" color="silver"> </a-box>
+
+  <!-- art on walls -->
+  <a-plane id="art1" src="images/tutle.webp" scale="2 2 0.05" rotation="0 0 0" position="-0.162 1.934 -4.792"></a-plane>
+  <a-plane id="art2" src="images/shrek2.png" scale="2 2 0.05" rotation="0 90 0" position="-4.826 1.896 -0.293"></a-plane>
+  <a-obj-model id="3dModel1" src="images/tinker.obj" mtl="images/obj.mtl" position="100 100 100
+  
+    " rotation="-90 0 0" scale="0.05 0.05 0.05"></a-obj-model>
+  
+</a-scene>
+
+  
 </body>
 
 </html>
