--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
   <!-- art on walls -->
   <a-plane id="art1" src="images/tutle.webp" scale="2 2 0.05" rotation="0 0 0" position="-0.162 1.934 -4.792"></a-plane>
   <a-plane id="art2" src="images/shrek2.png" scale="2 2 0.05" rotation="0 90 0" position="-4.826 1.896 -0.293"></a-plane>
-  <a-obj-model id="3dModel1" src="images/tinker.obj" mtl="images/obj.mtl" position="100 100 100
-  
-    " rotation="-90 0 0" scale="0.05 0.05 0.05"></a-obj-model>
+  <a-obj-model id="3dModel1" src="images/tinker.obj" mtl="images/obj.mtl" position="0 0 0" rotation="-90 0 0" scale="0.05 0.05 0.05"></a-obj-model>
   
 </a-scene>
 
